--- a/index.html
+++ b/index.html
@@ -3,10 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I will leave at 6!</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="left">
+        <div class="todo jsTodo">오늘 할 일</div>
+    </div>
+    <div class="right">
+        <div>날씨</div>
+    </div>
     <script src="app.js"></script>
 </body>
 </html>
