--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div class="left">
-        <div class="todo jsTodo">오늘 할 일</div>
+        <h1>오늘 할 일</h1>
+        <div class="input"></div>
     </div>
     <div class="right">
-        <div>날씨</div>
+        <h1>날씨</h1>
     </div>
     <script src="app.js"></script>
 </body>
