--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I will leave at 6!</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/45b9b7b830.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="left">
         <h1>오늘 할 일</h1>
-        <div class="input"></div>
+        <input id="writeTodo" type="text" placeholder= "&#xf303; 오늘의 할 일을 입력해주세요.">
     </div>
     <div class="right">
         <h1>날씨</h1>
