--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <div class="left">
         <h1>오늘 할 일</h1>
-        <input id="writeTodo" type="text" placeholder= "&#xf303; 오늘의 할 일을 입력해주세요.">
+        <form class= "writeTodo" id="js-writeTodo">
+        <input type="text" placeholder= "오늘의 할 일을 입력해주세요. + enter">
+        </form><br>
+        <ul class="todo__container js-todolist">
+        </ul>
+        </div>
     </div>
     <div class="right">
         <h1>날씨</h1>
