all delete button

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div class="left">
-        <h1>오늘 할 일</h1>
+        <button class="allDel js-allDel">모두 지우기</button>
+        <h1>오늘 할 일 </h1>
         <form class= "writeTodo" id="js-writeTodo">
         <input type="text" placeholder= "오늘의 할 일을 입력해주세요. + enter">
         </form><br>
