--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="left">
         <button class="allDel js-allDel">모두 지우기</button>
-        <h1>오늘 할 일 </h1>
+        <h1 class="js-today">오늘 할 일</h1>
         <form class= "writeTodo" id="js-writeTodo">
             <input type="text" placeholder= "오늘의 할 일을 입력해주세요. + enter">
         </form><br>
@@ -22,5 +22,6 @@
         <h1>날씨</h1>
     </div>
     <script src="app.js"></script>
+    <script src="todo.js"></script>
 </body>
 </html>
