--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div class="right">
         <h1>날씨</h1>
-        <h1>실행률</h1>
+        <h1>어떻게, 칼퇴 가능할까요?</h1>
     </div>
     <script src="app.js"></script>
     <script src="todo.js"></script>
