draw Weather with Nomad Coders lec

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://kit.fontawesome.com/45b9b7b830.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <!-- 왼쪽 -->
     <div class="left">
         <button class="allDel js-allDel">모두 지우기</button>
         <h1 class="js-today">오늘 할 일</h1>
@@ -18,11 +19,16 @@
         </ul>
         </div>
     </div>
+    <!-- 오른쪽 -->
     <div class="right">
-        <h1>날씨</h1>
+        <div class="weather">
+            <h1>날씨</h1>
+            <span class="js-weather"></span>
+        </div>
         <h1>어떻게, 칼퇴 가능할까요?</h1>
     </div>
     <script src="app.js"></script>
     <script src="todo.js"></script>
+    <script src="weather.js"></script>
 </body>
 </html>
