draw weather icon

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <div class="right">
         <div class="weather">
             <h1>날씨</h1>
-            <span class="js-weather"></span>
+            <div class="js-weather"></div>
         </div>
         <h1>어떻게, 칼퇴 가능할까요?</h1>
     </div>
