draw modern weather icon, footer

--- a/index.html
+++ b/index.html
@@ -8,27 +8,27 @@
     <script src="https://kit.fontawesome.com/45b9b7b830.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 왼쪽 -->
-    <div class="left">
-        <button class="allDel js-allDel">모두 지우기</button>
-        <h1 class="js-today">오늘 할 일</h1>
-        <form class= "writeTodo" id="js-writeTodo">
-            <input type="text" placeholder= "오늘의 할 일을 입력해주세요. + enter">
-        </form><br>
-        <ul class="todo__container js-todolist">
-        </ul>
+    <div class = "main">
+        <div class="left">
+            <button class="allDel js-allDel">모두 지우기</button>
+            <h1 class="js-today">오늘 할 일</h1>
+            <form class= "writeTodo" id="js-writeTodo">
+                <input type="text" placeholder= "오늘의 할 일을 입력해주세요. + enter">
+            </form><br>
+            <ul class="todo__container js-todolist">
+            </ul>
+        </div>
+        <div class="right">
+            <div class="weather">
+                <h1>날씨</h1>
+                <div class="currentWeather js-weather"></div>
+            </div>
+            <h1>어떻게, 칼퇴 가능할까요?</h1>
         </div>
     </div>
-    <!-- 오른쪽 -->
-    <div class="right">
-        <div class="weather">
-            <h1>날씨</h1>
-            <div class="js-weather"></div>
-        </div>
-        <h1>어떻게, 칼퇴 가능할까요?</h1>
-    </div>
-    <script src="app.js"></script>
-    <script src="todo.js"></script>
-    <script src="weather.js"></script>
+    <footer></footer>
+ <script src="app.js"></script>
+ <script src="todo.js"></script>
+ <script src="weather.js"></script>
 </body>
 </html>
