change weather UI

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="right">
             <div class="weather">
-                <h1>날씨</h1>
+                <h1 class="js-headWeather">날씨</h1>
                 <div class="currentWeather js-weather"></div>
             </div>
             <h1>어떻게, 칼퇴 가능할까요?</h1>
