--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>I will leave at 6!</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/45b9b7b830.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class = "main">
@@ -23,12 +22,18 @@
                 <h1 class="js-headWeather">날씨</h1>
                 <div class="currentWeather js-weather"></div>
             </div>
-            <h1>어떻게, 칼퇴 가능할까요?</h1>
+            <div class = "chart-part">
+                <h1>어떻게, 칼퇴 가능할까요?</h1>
+                <div class="pie-chart js-chart">
+                    <span class="percent js-percent"></span>
+                </div>
+            </div>
         </div>
     </div>
     <footer></footer>
  <script src="app.js"></script>
  <script src="todo.js"></script>
  <script src="weather.js"></script>
+ <script src="chart.js"></script>
 </body>
 </html>
