add cheer up message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <div class = "chart-part">
                 <h1>어떻게, 칼퇴 가능할까요?</h1>
+                <div class="cheer js-cheer"></div>
                 <div class="pie-chart js-chart">
                     <span class="percent js-percent"></span>
                 </div>
