weather time show

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <div class="right">
             <div class="weather">
-                <h1 class="js-headWeather">날씨</h1>
+                <h1 class="js-headWeather">날씨</h1><span class="js-weathertime"></span>
                 <div class="currentWeather js-weather"></div>
             </div>
             <div class = "chart-part">
