--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="weather">
                 <h1 class="js-headWeather">날씨</h1>
                 <div class="currentWeather js-weather"></div>
+                <div class="sixPmWeather js-sixPmWeather"></div>
             </div>
             <div class = "chart-part">
                 <h1>어떻게, 칼퇴 가능할까요?</h1>
