if it's raining at 6pm warning message

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </ul>
         </div>
         <div class="right">
-            <div class="weather">
+            <div class="weather js-weathermain">
                 <h1 class="js-headWeather">날씨</h1>
                 <div class="currentWeather js-weather"></div>
                 <div class="sixPmWeather js-sixPmWeather"></div>
